# Canda-UI

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  input.css  output.css  porn-lib.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: build.rs  main.rs
src/themes/: customTheme.ts  github-dark.json
