[package]
name = "canda"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "canda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy" }
raw-window-handle = "0.6.2"
tauri-plugin-decorum = "1.1.1"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }
aes = "0.7"
rand = "0.8"
base64 = "0.13"
libc = "0.2"
obfstr = "0.2"

# just dont change anything here idek why and how this works